--- a/web-thu/styles/scss/_ty.scss
+++ b/web-thu/styles/scss/_ty.scss
@@ -356,7 +356,7 @@ body .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-
   padding: 120px 0 0;
   height: 761px;
   box-sizing: border-box;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   background-image: url(../images-2/about-detial.png);
   position: relative;
