--- a/web-thu/styles/scss/_ty.scss
+++ b/web-thu/styles/scss/_ty.scss
@@ -704,8 +704,7 @@ body .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-
         box-shadow: 0px 5px 23px 1px rgba(0, 0, 0, 0.18);
 
         .detial h3 {
-          font-weight: bold;
-          text-decoration: underline;
+          color: #063456;
         }
 
         img {
@@ -1026,7 +1025,6 @@ body .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-
 
     &:hover {
       color: #1973C1;
-      font-weight: bold;
     }
   }
 }
@@ -1142,7 +1140,6 @@ body .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-
       transition: all .3s;
 
       &:hover {
-        font-weight: bold;
         color: #063456;
       }
     }
