--- a/web-thu/styles/scss/_mobile.scss
+++ b/web-thu/styles/scss/_mobile.scss
@@ -441,6 +441,8 @@
       height: rem(40);
       line-height: rem(40);
       font-size: rem(20);
+      overflow: scroll;
+      white-space: nowrap;
 
       span {
         &:before {
@@ -448,6 +450,13 @@
           height: rem(4);
           vertical-align: rem(4);
           margin: 0 rem(10) 0;
+        }
+
+        &:first-child {
+          padding-left: rem(12);
+        }
+        &:last-child {
+          padding-right: rem(12);
         }
       }
     }
