--- a/web-thu/styles/scss/_ty.scss
+++ b/web-thu/styles/scss/_ty.scss
@@ -1395,7 +1395,7 @@ body .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-
   width: 1200px;
   box-sizing: border-box;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
-  margin: 0 auto;
+  margin: 20px auto 0;
 
   ul {
     margin-bottom: 30px;
