--- a/web-tsu2/styles/scss/_animation.scss
+++ b/web-tsu2/styles/scss/_animation.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-.content, .title, .newList,.ts-tit,.school_life_list,.school_life_content, .student_life, footer, .ty-title, .project, .ty-more, .ty-more-1, .ty-more-2, .ty-more-3, .ty-more-4, .ty-banner h2,.nav-list, .points i,.map .student,.dean-img,.dean-say,.ty-general .in,.ty-training .in,.ty-connect img,.ty-connect p,.ty-guidance img,.ty-guidance .r,.ty-recruit, .ty-vocation,.ty-how-connect,.report-in .left,.report-in .right,.report-list,.ty-new-list a,.new-main p,.new-main img,.left-bar .time,.left-bar .share,.ty-new-list2 .list a,.ty-new-list3 .list a,.ty-zs img,.ty-zs .in,.ty-bk img,.ty-bk .in,.ty-download img,.ty-download .in,.ty-sport img,.ty-sport .in,.ty-department-list,.teacher,.set-in .img,.set-in .zy,.ty-ugd-programme img,.ty-pro-list,.ty-ugd-course img{
+.title, .newList,.ts-tit,.school_life_list,.school_life_content, .student_life, footer, .ty-title, .project, .ty-more, .ty-more-1, .ty-more-2, .ty-more-3, .ty-more-4, .ty-banner h2,.nav-list, .points i,.dean-img,.dean-say,.ty-general .in,.ty-training .in,.ty-connect img,.ty-connect p,.ty-guidance img,.ty-guidance .r,.ty-recruit, .ty-vocation,.ty-how-connect,.report-in .left,.report-in .right,.report-list,.ty-new-list a,.new-main p,.new-main img,.left-bar .time,.left-bar .share,.ty-new-list2 .list a,.ty-new-list3 .list a,.teacher,.set-in .img,.set-in .zy,.ty-pro-list{
 	opacity: 1;
 	transition: all .5s;
 	visibility: hidden;
